--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -38,14 +38,14 @@ jobs:
           /etc/init.d/mysql start
           mysql --host=localhost -uroot -pitc123! < delete_sadb.sql
           mysql --host=localhost -uroot -pitc123! < create_sadb.sql
-          cd ./src/sa/test_sadb_mariadb_sql
+          cd /__w/CryptoLib/CryptoLib/src/sa/test_sadb_mariadb_sql
           mysql --host=localhost -uroot -pitc123! < create_sadb_unit_test_user_grant_permissions.sql
           mysql --host=localhost -uroot -pitc123! < create_sadb_jpl_unit_test_security_associations.sql
           pwd
           ls
           
           cd /__w/CryptoLib/CryptoLib/build/
-          #ls
+          ls
           cd /__w/CryptoLib/CryptoLib/build/bin/
           ./ut_mariadb
          
