--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,12 +28,12 @@ OPTION(KMCCRYPTO "KmcCrypto" OFF) # Disabled by default, enable with: -DKMCCRYPT
 OPTION(ENCTEST "Encryption-Tests" OFF) # Disabled by default, enable with: -DENCTEST=ON
 OPTION(CODECOV "Code-Coverage" OFF) # Disabled by default, enable with: -DCODECOV=ON
 OPTION(SYSTEM_INSTALL "SystemInstall" OFF) #Disabled by default, enable with: -DSYSTEM_INSTALL=ON
+OPTION(KMC_MDB_RH "KMC-MDB-RedHat-Integration-Testing" OFF) #Disabled by default, enable with: -DKMC_MDB_RH=ON
+OPTION(KMC_MDB_DB "KMC-MDB-Debian-Integration-Testing" OFF) #Disabled by default, enable with: -DKMC_MDB_DB=ON
 
-IF(NOT DEFINED CFE_SYSTEM_PSPNAME)
-    # Not cFE / cFS
-    set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
-    set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
-ENDIF()
+
+set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
+set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
 
 IF(CRYPTO_SUBMODULE_INSTALL) #If building CryptoLib as a submodule of another build system (EG, JPL KMC, Nasa NOS3, etc...)
     set(CMAKE_INSTALL_PREFIX ${CRYPTO_SUBMODULE_INSTALL})
@@ -53,12 +53,20 @@ IF(ENCTEST)
     ADD_DEFINITIONS(-DENCTEST)
 ENDIF(ENCTEST)
 
+IF(KMC_MDB_RH)
+    ADD_DEFINITIONS(-DKMC_MDB_RH)
+ENDIF(KMC_MDB_RH)
+
+IF(KMC_MDB_DB)
+    ADD_DEFINITIONS(-DKMC_MDB_DB)
+ENDIF(KMC_MDB_DB)
+
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
     enable_testing()
 endif()
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -g -O0")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -Wall -Wextra -Werror -g -O0")
 
 if(CODECOV)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
@@ -69,10 +77,12 @@ include_directories(include)
 # The shared OSAL and cFE include directories should always be used
 # Note that this intentionally does NOT include PSP-specific includes, just the generic
 # Only include cFS/NOS3 directories if env var is defined
-IF(DEFINED CFE_SYSTEM_PSPNAME)
+if(DEFINED ENV{CFECORE_SOURCE_DIR}) #if ${CFECORE_SOURCE_DIR} is set, expect cFS build infrastructure to be in place.
     include_directories(${CFECORE_SOURCE_DIR}/src/inc)
     include_directories(${CFEPSP_SOURCE_DIR}/fsw/inc)
     ADD_DEFINITIONS(-DNOS3)
+else()
+    #pass
 endif()
 
 if(NOT DEFINED ${PROJECT_BINARY_DIR})
@@ -85,6 +95,4 @@ if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MYPROJECT_BUILD_TESTING) AND BUI
     add_subdirectory(test)
 endif()
 
-IF(NOT DEFINED CFE_SYSTEM_PSPNAME)
-    add_subdirectory(util)
-ENDIF()
+add_subdirectory(util)
