WIP: NULL IV Unit Testing, and KMC Side

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,17 +72,17 @@ if(${KMC_MDB_RH} OR ${KMC_MDB_DB})
              COMMAND ${PROJECT_BINARY_DIR}/bin/ut_sadb_err_cases_kmc_crypto
              WORKING_DIRECTORY ${PROJECT_TEST_DIR})
     
-    add_test(NAME UT_MYSQL_TLS_CONNECTION
-             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mysql_tls_connection
-             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+    # add_test(NAME UT_MYSQL_TLS_CONNECTION
+    #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mysql_tls_connection
+    #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
     #add_test(NAME UT_MYSQL_M_TLS_CONNECTION
     #         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mysql_m_tls_connection
     #         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
              
-    add_test(NAME UT_MARIADB
-             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mariadb
-             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+    # add_test(NAME UT_MARIADB
+    #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mariadb
+    #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
     
     add_test(NAME UT_KMC_CRYPTO
              COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto
