[nasa/cryptolib#145] Update codecov.yml to ignore the non-default confguration options as well as the support and test folders entirely;

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,13 +1,11 @@
 ignore:
-  - "test/tests/process_security.c"
-  - "test/tests/ut_mysql_tls_connection.c"
-  - "test/tests/ut_mysql_m_tls_connection.c"  
-  - "test/tests/ut_kmc_crypto.c"
-  - "test/tests/ut_kmc_crypto_aes_cmac.c"
-  - "test/tests/apply_security.c"
-  - "test/tests/crypto_sequence.c"
-  - "test/include/utest.h"
-  - "test/core/shared_util.c"
-  - "src/core/crypto_print.c"
-  - "src/src_feature_stubs/cryptography_kmc_stub/cryptography_interface_kmc.stub.c"
-  - "src/src_feature_stubs/mysql_stub/sadb_routine_mariadb.stub.c"
+  - "src/crypto/kmc/*"
+  - "src/crypto/kmc_stub/*"
+  - "src/crypto/libgcrypt_stub/*"
+  - "src/sa/internal_stub/*"
+  - "src/sa/mariadb/*"
+  - "src/sa/mariadb_stub/*"
+  - "src/sa/sadb_mariadb_sql/*"
+  - "src/sa/test_sadb_mariadb_sql/*"
+  - "support/*"
+  - "test/*"
