[nasa/cryptolib#167] Switch back to github using ubuntu-latest container;

--- a/.github/workflows/internal_build.yml
+++ b/.github/workflows/internal_build.yml
@@ -6,10 +6,31 @@ on:
   pull_request:
 
 jobs:
-  kmc_build:
-    runs-on: ivvitc/cryptolib:latest
+  internal_build:
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
+
+    # Container Setup
+    - name: Update
+      run: sudo apt-get update
+
+    - name: Install Dependencies
+      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3 lcov
+
+    - name: Install Python Libraries
+      run: sudo pip install pycryptodome
+    # End Container Setup
     
     - name: Internal Build Script
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
+
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}/build
+      run: make gcov
+
+    - name: Upload 
+      uses: codecov/codecov-action@v1
+      with:
+        files: 'coverage/*.c.gcov'
