--- a/.github/workflows/minimal_build.yml
+++ b/.github/workflows/minimal_build.yml
@@ -1,4 +1,4 @@
-name: Internal Build
+name: Minimal Build
 
 on: 
   push:
@@ -6,10 +6,22 @@ on:
   pull_request:
 
 jobs:
-  kmc_build:
-    runs-on: ivvitc/cryptolib:latest
+  minimal_build:
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
+
+    # Container Setup
+    - name: Update
+      run: sudo apt-get update
+
+    - name: Install Dependencies
+      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3 lcov
+
+    - name: Install Python Libraries
+      run: sudo pip install pycryptodome
+    # End Container Setup
     
-    - name: Internal Build Script
+    - name: Minimal Build Script
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_minimal.sh
