--- a/.github/workflows/kmc_build.yml
+++ b/.github/workflows/kmc_build.yml
@@ -13,14 +13,25 @@ jobs:
     - uses: actions/checkout@v2
 
     # Container Setup
-    - name: Update
-      run: sudo apt-get update
-
-    - name: Install Dependencies
-      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3 lcov
-
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
+    - name: Container Setup
+      run: apt update
+      run: apt install -y \
+        autoconf \
+        cmake \
+        g++-multilib \
+        gcc-multilib \
+        gettext \
+        git \
+        gdb \
+        lcov \
+        libcurl4-openssl-dev \
+        libmariadb-dev \
+        libmariadb-dev-compat \
+        libgcrypt20-dev \
+        libtool \
+        python3-dev \
+        python3-pip
+      run: pip3 install pycryptodome
     # End Container Setup
     
     - name: KMC Build Script
