[nasa/nos3#88] Updates to conform with draco-rc4 continued;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@
 # jstar-development-team@mail.nasa.gov
 
 cmake_minimum_required(VERSION 3.14.0)
-project(CRYPTO C)
+project(crypto C)
 
 #
 # Define Build Flags
