--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ option(DEBUG "Debug" OFF)
 option(KEY_CUSTOM "Key Module - Custom" OFF)
 option(KEY_INTERNAL "Key Module - Internal" ON)
 option(KEY_KMC "Key Module - KMC OFF")
+option(MC_CUSTOM "Monitoring and Control - Custom" OFF)
+option(MC_INTERNAL "Monitoring and Control - Internal" ON)
 option(SA_INTERNAL "Security Association - Internal" ON)
 option(SA_MARIADB "Security Association - MariaDB" OFF)
 option(SUPPORT "Support" OFF)
