[nasa/cryptolib#186] Updates to have SA interface confirm with other interface naming conventions;

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,7 +5,7 @@ ignore:
   - "src/sa/internal_stub/*"
   - "src/sa/mariadb/*"
   - "src/sa/mariadb_stub/*"
-  - "src/sa/sadb_mariadb_sql/*"
-  - "src/sa/test_sadb_mariadb_sql/*"
+  - "src/sa/sa_mariadb_sql/*"
+  - "src/sa/test_sa_mariadb_sql/*"
   - "support/*"
   - "test/*"
