--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,7 +63,7 @@ if(${KMC_MDB_RH} OR ${KMC_MDB_DB})
              WORKING_DIRECTORY ${PROJECT_TEST_DIR})
              
     add_test(NAME UT_SADB_ERR_CASES_KMC_CRYPTO
-             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_sadb_err_cases_kmc_crypto
+             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_sa_err_cases_kmc_crypto
              WORKING_DIRECTORY ${PROJECT_TEST_DIR})
     
     # add_test(NAME UT_MYSQL_TLS_CONNECTION
@@ -168,8 +168,8 @@ if(${CODECOV})
         )
     add_custom_command(TARGET gcov
         COMMAND echo "=================== GCOV ===================="
-        #COMMAND gcov -b -o ${OBJECT_DIR} crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_print.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sadb_routine_inmemory.template.c.gnco sadb_routine.c.gnco
-        COMMAND gcov -b -o ${OBJECT_DIR} crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sadb_routine_inmemory.template.c.gnco 
+        #COMMAND gcov -b -o ${OBJECT_DIR} crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_print.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sa_routine_inmemory.template.c.gnco sa_routine.c.gnco
+        COMMAND gcov -b -o ${OBJECT_DIR} crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sa_routine_inmemory.template.c.gnco 
         # | grep -A 5 "Adder.cpp" > CoverageSummary.tmp
         #COMMAND cat CoverageSummary.tmp
         #COMMAND echo "-- Coverage files have been output to ${PROJECT_BINARY_DIR}/coverage"
