[nasa/cryptolib#144] Create initial clone of libgcrypt crypto module for WolfSSL;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ project(crypto C)
 option(CODECOV "Code Coverage" OFF)
 option(CRYPTO_LIBGCRYPT "Cryptography Module - Libgcrypt" ON)
 option(CRYPTO_KMC "Cryptography Module - KMC" OFF)
+option(CRYPTO_WOLFSSL "Cryptography Module - WolfSSL" OFF)
 option(DEBUG "Debug" OFF)
 option(KEY_CUSTOM "Key Module - Custom" OFF)
 option(KEY_INTERNAL "Key Module - Internal" ON)
