[nasa/cryptolib#144] CI for wolf build - set LD_LIBRARY_PATH to wolfssl build directory;

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,3 +102,5 @@ jobs:
     - name: Wolf Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_wolf.sh
+      env:
+        LD_LIBRARY_PATH: /tmp/wolfssl/build
