--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,8 +100,8 @@ jobs:
            cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
            cmake --build .;
            echo $PATH;
-           ls /home/runner/.local
-           export PATH=$PATH:/home/runner/.local
+           ls /home/runner/.local;
+           export PATH=$PATH:/home/runner/.local;
            make install;
     # End Container Setup
     
