--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,9 +99,7 @@ jobs:
            cd /tmp/wolfssl/build;
            cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
            cmake --build .;
-           echo $PATH;
-           ls /home/runner/.local;
-           export PATH=$PATH:/home/runner/.local;
+           export PATH=$PATH:/home/runner/.local/include/wolfssl;
            make install;
     # End Container Setup
     
